# sails

./: .gitignore  README.md  SECURITY.md  pyproject.toml
src/sails/: __init__.py
src/sails/common/: dictionary.py  exceptions.py  typing.py
src/sails/core/: crypto.py  datetime.py  file.py  os.py  path.py  random.py  retry.py
src/sails/middleware/: profiler.py
src/sails/sdk/: directory.py
